<resources>
    <string name="app_name" translatable="false">Avaya Vantage\u2122 Basic</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="cd_video_mute">video mute</string>
    <string name="cd_off_hook">Off Hook</string>
    <string name="mid_control_dtmf">Mid control dtmf</string>
    <string name="sample_dialer_display_name">%1$s &lt;b>%2$s&lt;/b></string>
    <string name="device_not_supported">This application can run only on Avaya Vantage\u2122 device.\nApplication will be closed.</string>
    <string-array name="nameDisplayPref">
        <item>First name first</item>
        <item>Last name first</item>
    </string-array>
    <string-array name="newContactPref">
        <item>@string/contact_details_add_contact_local</item>
        <item>@string/contact_details_add_contact_enterprise</item>
    </string-array>
    <string-array name="newContactPrefIpo">
        <item>@string/contact_details_add_contact_local</item>
        <item>@string/contact_details_add_contact_personal_directory</item>
    </string-array>
    <string-array name="newContactValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="nameSortPrefValues">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="dialer_numbers" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>*</item>
        <item>0</item>
        <item>#</item>
    </string-array>
    <string-array name="dialer_letters" translatable="false">
        <item>.,@</item>
        <item>ABC</item>
        <item>DEF</item>
        <item>GHI</item>
        <item>JKL</item>
        <item>MNO</item>
        <item>PQRS</item>
        <item>TUV</item>
        <item>WXYZ</item>
        <item></item>
        <item>+</item>
        <item></item>
    </string-array>
    <string-array name="number_entry_options">
        <item>Choose a contact</item>
        <item>Enter a number</item>
    </string-array>
    <string name="voice_contact_search_hint">find someone</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="searching">Searching&#8230;</string>
    <string name="all_contacts">All Contacts</string>
    <string name="local_contacts">Local Contacts</string>
    <string name="bt_sync">Bluetooth Sync</string>
    <string name="enterprise_contacts">Enterprise Contacts</string>
    <string name="personal_directory_contacts">Personal Contacts</string>
    <string name="calling">Calling&#8230;</string>
    <string name="on_hold">On hold</string>
    <string name="no_contacts_to_display">No contacts to display</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_empty_list">No favorite contacts to display</string>
    <string name="recent_call_all">All Calls</string>
    <string name="recent_call_missed">Missed Calls</string>
    <string name="recent_call_outgoing">Outgoing Calls</string>
    <string name="recent_call_incoming">Incoming Calls</string>
    <string name="recent_call_delete_history">Clear All Calls</string>
    <string name="no_recent_calls_to_display">No recent calls to display</string>
    <string name="recent_call_at">%1$s at %2$s</string>
    <string name="contact_details_title">Contact Details</string>
    <string name="contact_details_edit">Edit</string>
    <string name="contact_details_delete">Delete</string>
    <string name="contact_details_add_contact">Create Local Contact</string>
    <string name="contact_details_add_contact_local">Local Contact</string>
    <string name="contact_details_add_contact_enterprise">Enterprise Contact</string>
    <string name="contact_details_add_contact_personal_directory">Personal Contact</string>
    <string name="contact_details_ipo_only_one_number">This type of contact can only have one phone number</string>
    <string name="new_contact_header_text">Create %1$s</string>
    <string name="edit_contact_header_text">Edit %1$s</string>
    <string name="contact_name_char_limit">This type of contacts cannot have name longer than %s characters</string>
    <string name="contact_add_label">Create Contact</string>
    <string name="contact_details_make_a_call">Make a Call</string>
    <string name="contact_details_work">Work</string>
    <string name="contact_details_mobile">Mobile</string>
    <string name="contact_details_home">Home</string>
    <string name="contact_details_handle">Handle</string>
    <string name="contact_details_fax">Fax</string>
    <string name="contact_details_pager">Pager</string>
    <string name="contact_details_assistant">Assistant</string>
    <string name="contact_details_other">Other</string>
    <string name="contact_details_primary">Primary</string>
    <string-array name="phone_type_array" translatable="false">
        <item>@string/contact_details_work</item>
        <item>@string/contact_details_mobile</item>
        <item>@string/contact_details_home</item>
        <item>@string/contact_details_handle</item>
        <item>@string/contact_details_fax</item>
        <item>@string/contact_details_pager</item>
        <item>@string/contact_details_assistant</item>
        <item>@string/contact_details_other</item>
        <item>@string/contact_details_primary</item>
    </string-array>
    <string name="quick_tutorial">Quick Tutorial</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="call_screen">Active call</string>
    <string name="call_features">Call features</string>
    <string name="contacts">Contacts</string>
    <string name="recents">Recents</string>
    <string name="skip_button">SKIP</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="done">DONE</string>
    <string name="tutorial_welcome">Welcome to Avaya Vantage\u2122 Basic</string>
    <string name="tutorial_volume">Volume buttons\nare at the back of\nthe unit</string>
    <string name="tutorial_optional_handset">(Optional handset)</string>
    <string name="tutorial_stand_angle">The stand angle\ncan be adjusted</string>
    <string name="tutorial_tap_access">Tap to access preferences</string>
    <string name="tutorial_block">Block your\ncamera</string>
    <string name="tutorial_mute">Mute your\nmicrophone</string>
    <string name="tutorial_tap_handsfree">Tap for hands free or\ntap arrow to change\nyour audio device</string>
    <string name="tutorial_tap_back">Tap to go back to previous\nscreen</string>
    <string name="tutorial_tap_advanced">Tap to access advanced controls</string>
    <string name="tutorial_transfer_call">Transfer an active call to another participant</string>
    <string name="tutorial_hold_and_start_new_one">Hold current call and\nstart a new one</string>
    <string name="tutorial_add_participant">Add a new participant to the current call</string>
    <string name="tutorial_merge_call">Merge existing calls into a conference call</string>
    <string name="tutorial_escalate_video">Escalate to a video call</string>
    <string name="tutorial_bring_focus">Your current call - tap\nto bring to focus</string>
    <string name="tutorial_add_new">Add a new contact</string>
    <string name="tutorial_tap_row">Tap on a row to view\ncontact details</string>
    <string name="tutorial_tap_default">Tap to call the default\nnumber by voice or video</string>
    <string name="tutorial_sync_contacts">Sync contacts from a\nmobile device</string>
    <string name="tutorial_sync_recent">Sync recent calls from\na mobile device</string>
    <string name="tutorial_tap_to_call">Tap to call the default\nnumber by voice or\nvideo</string>
    <string name="preference_version">Version</string>
    <string name="preference_build">Build</string>
    <string name="preference_build_date">Build date</string>
    <string name="preference_sdk_version">Avaya Breeze Client SDK version</string>
    <string name="first_name_first">First Name First</string>
    <string name="last_name_first">Last Name First</string>
    <string name="ring_preferences">Ring preferences</string>
    <string name="choose_ringtone">Choose ringtone</string>
    <string name="ringtone_default">Default ringtone</string>
    <string name="ringtone_silent">None (Silent)</string>
    <string name="display_preferences">Display preferences</string>
    <string name="contact_preferences">Contacts preferences</string>
    <string name="name_display_preferences">Name display preferences</string>
    <string name="name_sort_preferences">Name sort preferences</string>
    <string name="new_contact_type_preferences">Create new contact as</string>
    <string name="application">Application</string>
    <string name="audio_preferences">Audio</string>
    <string name="audio_video">Audio/Video</string>
    <string name="pick_contact">Choose a contact to add to the call</string>
    <string name="feature_dialog_title">Call Features</string>
    <string name="feature_dialog_transfer">Transfer</string>
    <string name="feature_dialog_merge">Merge</string>
    <string name="feature_dialog_start_video">Start Video</string>
    <string name="feature_dialog_stop_video">Stop Video</string>
    <string name="feature_dialog_conference">Add Someone</string>
    <string name="feature_dialog_new_call">New call</string>
    <string name="feature_dialog_drop_last">Drop last participant</string>
    <string name="dialog_empty_display">Enter a number to\ntransfer the call to</string>
    <string name="operation_failed">Operation failed. Please try again later</string>
    <string name="max_participants_in_conference">Operation failed. Maximal number of participants reached.</string>
    <string name="escalation_failed">Escalation to video failed</string>
    <string name="deescalation_failed">Stop video failed</string>
    <string name="merge_complete">Merge complete</string>
    <string name="trasfer_complete">Transfer request is complete</string>
    <string name="ac_dialer_number" translatable="false">5</string>
    <string name="ac_dialer_letters" translatable="false">JKL</string>
    <string name="ac_caller_name" translatable="false">david melec israel</string>
    <string name="call_list_contact" translatable="false">KH</string>
    <string name="call_list_text" translatable="false">New Text</string>
    <string name="call_list_duration" translatable="false">0:00</string>
    <string name="contact_list_section_label" translatable="false">Section Label</string>
    <string name="dialer_display_number" translatable="false">1234567890</string>
    <string name="contact_details_number" translatable="false">613–555-9052</string>
    <string name="select_audio_dev_title">Select audio device</string>
    <string name="select_audio_dev_bt_headset">BT Headset</string>
    <string name="select_audio_dev_35headset">3.5 Headset</string>
    <string name="select_audio_dev_headset">Headset</string>
    <string name="select_audio_dev_handset">Handset</string>
    <string name="select_audio_dev_speaker">Speaker</string>
    <string name="user_settings">User Settings</string>
    <string name="support">Support</string>
    <string name="user_preferences">User Preferences</string>
    <string name="application_settings">Application settings</string>
    <string name="audio_call_content_description">Audio call</string>
    <string name="video_call_content_description">Video call</string>
    <string name="add_contact_content_description">Add contact</string>
    <string name="missed_content_description">Missed call</string>
    <string name="outgoing_content_description">Outgoing call</string>
    <string name="recent_number_type_description">Type</string>
</resources>